<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/overflowMenu"
        android:icon="@drawable/ic_three_dots"
        android:title=""
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/mainMenuAddPlaylist"
                android:title="@string/add_playlist"
                app:showAsAction="ifRoom" />
            <item android:id="@+id/mainMenuLoadPlaylist"
                android:title="@string/load_playlist"
                app:showAsAction="ifRoom" />
            <item android:id="@+id/mainMenuDeletePlaylist"
                android:title="@string/delete_playlist"
                app:showAsAction="ifRoom" />
        </menu>
    </item>
</menu>
