<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
    </data>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:hint="@string/playlist_name"
            android:id="@+id/addPlaylistEtPlaylistName"
            android:layout_width="match_parent"
            android:layout_height="45dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/ok"
                android:layout_weight="0"
                android:id="@+id/addPlaylistBtnOk"/>
            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <Button
                android:layout_width="150dp"
                android:layout_marginRight="5dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/cancel"
                android:id="@+id/addPlaylistBtnCancel"/>


        </LinearLayout>

    </LinearLayout>
</layout>